Fix width of experiment submission popup on narrow screens
Resolves #465.

--- a/hobbit-gui/gui-client/src/styles.css
+++ b/hobbit-gui/gui-client/src/styles.css
@@ -20,6 +20,13 @@ button.btn {
     cursor: pointer;
 }
 
+/* Prevent Bootstrap's modal dialog from being too narrow */
+@media (min-width: 576px) {
+  .modal-dialog {
+    max-width: 800px;
+  }
+}
+
 /* Prevent PrimeNG DataTable headers from being unselectable */
 .ui-unselectable-text {
   -webkit-user-select: auto !important;
